# Image-meta-data-extractor-SQLite

./: Cargo.toml  README.md  run.sh
src/: json.rs  main.rs
src/migratrions/: mod.rs  table.rs
src/utils/: exif_get_value_abstraction.rs  mod.rs
