[package]
name = "rocket"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
rocket = "0.4.10"
serde = { version = "1.0", features = ["derive"] }
kamadak-exif = "0.5.4"
serde_json = "1.0.85"
sqlite = "0.27.0"
[dependencies.rocket_contrib]
version = "0.4.10"
default-features = false
features = ["json"]
